# api-client-python

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .swagger-codegen-ignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py  test-requirements.txt  tox.ini
.openapi-generator/: FILES
docs/: AccountApi.md  ApiAccessToken.md  AppScopes.md  Assignment.md  AssignmentCanvas.md  AssignmentCopy.md  AssignmentCopyResponse.md  AssignmentCopyResponseCapabilities.md  AssignmentCopyResponseCapabilitiesCanPublishInClassError.md  AssignmentCreation.md  AssignmentCreationGoogleClassroom.md  AssignmentCreationMicrosoftGraph.md  AssignmentLti.md  AssignmentMfc.md  AssignmentSubmission.md  AssignmentSubmissionComment.md  AssignmentSubmissionCommentCreation.md  AssignmentSubmissionComments.md  AssignmentSubmissionHistory.md  AssignmentSubmissionHistoryAttachment.md  AssignmentSubmissionHistoryState.md  AssignmentSubmissionLti.md  AssignmentSubmissionPlaybackInner.md  AssignmentSubmissionState.md  AssignmentSubmissionUpdate.md  AssignmentSubmissionUpdateComments.md  AssignmentType.md  AssignmentUpdate.md  ClassApi.md  ClassAssignment.md  ClassAssignmentCanvas.md  ClassAssignmentLti.md  ClassAssignmentMfc.md  ClassAssignmentUpdate.md  ClassAssignmentUpdateGoogleClassroom.md  ClassAssignmentUpdateMicrosoftGraph.md  ClassAttachmentCreation.md  ClassCreation.md  ClassDetails.md  ClassDetailsCanvas.md  (+124 more)
flat_api/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py  schemas.py
test/: test_account_api.py  test_api_access_token.py  (+162 more)
(+1022 files in other folders)
