[tool.poetry]
name = "flat_api"
version = "0.9.0"
description = "Flat API"
authors = ["Flat <developers@flat.io>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/FlatIO/api-client-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Flat API"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^2.0"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
